--- a/listaZadanBolkaILolka/MainWindow.axaml
+++ b/listaZadanBolkaILolka/MainWindow.axaml
@@ -6,4 +6,32 @@
         x:Class="listaZadanBolkaILolka.MainWindow"
         Title="listaZadanBolkaILolka">
     
+        <Grid HorizontalAlignment="Center">
+                <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                
+                <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Text="Bolek i Lolek" FontWeight="Bold"
+                           FontSize="50"
+                           HorizontalAlignment="Center"
+                           Padding="15"
+                          />
+
+                <TextBox Grid.Row="1" Grid.Column="0" Width="130" Height="30" Watermark="Wpisz zadanie..."
+                         />
+                <ComboBox Grid.Row="1" Grid.Column="1" Width="130" Margin="10">
+                        <ComboBoxItem Content="Bolek"/>
+                        <ComboBoxItem Content="Lolek"/>
+                </ComboBox>
+                
+                <Image Grid.Row="1" Grid.Column="2"></Image>
+        </Grid>
 </Window>
